--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieAppForGitContext": "Server=(localdb)\\mssqllocaldb;Database=MovieAppForGitContext-9c8d698a-c1fe-4c60-86f8-e2170ae4a8bd;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
